--- a/web/css/maze.css
+++ b/web/css/maze.css
@@ -29,6 +29,7 @@ body{
 
 .maze > .maze-row span{
   margin:1px;
+  vertical-align:middle;
   padding:0;
   display: inline-block;
   background:red;
@@ -49,7 +50,26 @@ body{
 }
 
 .maze-row span i{
-  float:left;
+  font-size:14px;
+  color:#fff;
+  width:100%;
+  text-align:center;
+  vertical-align:middle;
+  padding-top: 2px;
+}
+
+.maze-row span.cell_wall i{
+  color:green;
+}
+
+.maze-row span.cell_wall i.fa-square{
+  opacity: 0.8;
+  color:#444;
+}
+
+#miniatures-section i{
+  display:none;
+  font-size: 0px;
 }
 
 span.cell_path{
@@ -70,4 +90,35 @@ span.cell_wall{
 
 #miniatures-section{
   margin-top:50px;
+}
+
+
+
+.rotateforever {
+    -webkit-animation: rotation 5s infinite linear;
+}
+
+@-webkit-keyframes rotation {
+    from {-webkit-transform: rotate(0deg);}
+    to   {-webkit-transform: rotate(359deg);}
+}
+
+
+.translatetree {
+    -webkit-animation: translateT 2s infinite linear;
+}
+
+@-webkit-keyframes translateT {
+    from {-webkit-transform: translate(-10,0);}
+    to   {-webkit-transform: translate(10),1em;}
+}
+
+
+.scaleeforever {
+    -webkit-animation: scaleF 1s infinite linear;
+}
+
+@-webkit-keyframes scaleF {
+    from {-webkit-transform: scale(1.2);}
+    to   {-webkit-transform: scale(0.8);}
 }
