Removed scale animation on ff

--- a/web/css/maze.css
+++ b/web/css/maze.css
@@ -111,7 +111,7 @@ span.cell_wall{
 /********/
 .scaleeforever {
     -webkit-animation: scaleF 1s infinite linear;
-    animation: scaleF 1s infinite linear;
+    /* animation: scaleF 1s infinite linear; <--- too slow */
 }
 
 @-webkit-keyframes scaleF {
